[gd_scene load_steps=73 format=2]

[ext_resource path="res://Deadth.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://Asset/Dude/idle.png" type="Texture" id=5]
[ext_resource path="res://UI inGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://Asset/Font/DisposableDroidBB.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Asset/Dude/run.png" type="Texture" id=8]
[ext_resource path="res://Asset/Dude/jump.png" type="Texture" id=9]
[ext_resource path="res://Asset/Dude/attacks.png" type="Texture" id=10]
[ext_resource path="res://Asset/Dude/charge.png" type="Texture" id=11]
[ext_resource path="res://Asset/Dude/blast.png" type="Texture" id=12]
[ext_resource path="res://Asset/Dude/roll.png" type="Texture" id=13]
[ext_resource path="res://Asset/Dude/fall.png" type="Texture" id=14]
[ext_resource path="res://Asset/Dude/teleport.png" type="Texture" id=15]
[ext_resource path="res://Asset/GUI/PngItem_2242554.png" type="Texture" id=16]
[ext_resource path="res://Asset/Dude/damaged.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 15 )
region = Rect2( 30, 0, 30, 23 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 15 )
region = Rect2( 30, 23, 30, 23 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 15 )
region = Rect2( 30, 46, 30, 23 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 15 )
region = Rect2( 30, 69, 30, 23 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 15 )
region = Rect2( 30, 92, 30, 23 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 17 )
region = Rect2( 34, 0, 17, 23 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 17 )
region = Rect2( 34, 23, 17, 23 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 10 )
region = Rect2( 30, 0, 30, 23 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 30, 23, 30, 23 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 10 )
region = Rect2( 30, 46, 30, 23 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 34, 0, 17, 23 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 34, 23, 17, 23 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 34, 46, 17, 23 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 34, 69, 17, 23 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 34, 92, 17, 23 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 30, 69, 30, 23 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 30, 92, 30, 23 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 30, 115, 30, 23 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 34, 0, 17, 23 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 34, 0, 17, 23 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 34, 23, 17, 23 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 34, 46, 17, 23 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 34, 69, 17, 23 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 30, 138, 30, 23 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 30, 161, 30, 23 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 10 )
region = Rect2( 30, 184, 30, 23 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 10 )
region = Rect2( 30, 207, 30, 23 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 10 )
region = Rect2( 30, 230, 30, 23 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 10 )
region = Rect2( 30, 253, 30, 23 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 14 )
region = Rect2( 34, 0, 17, 23 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 121, 23 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 11 )
region = Rect2( 0, 23, 121, 23 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 11 )
region = Rect2( 0, 46, 121, 23 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 11 )
region = Rect2( 0, 69, 121, 23 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 11 )
region = Rect2( 0, 92, 121, 23 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 11 )
region = Rect2( 0, 115, 121, 23 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 11 )
region = Rect2( 0, 138, 121, 23 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 11 )
region = Rect2( 0, 161, 121, 23 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 13 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 13 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 13 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 13 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 13 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 121, 23 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 12 )
region = Rect2( 0, 23, 121, 23 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 12 )
region = Rect2( 0, 46, 121, 23 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 12 )
region = Rect2( 0, 69, 121, 23 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 12 )
region = Rect2( 0, 92, 121, 23 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 12 )
region = Rect2( 0, 115, 121, 23 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "knock",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "at1",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "at2",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "at3",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "charge",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "dodge",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "spcAt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 10, 23.0437 )

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 10.4865, 22.3342 )

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 10.6708, 13.2213 )

[sub_resource type="RectangleShape2D" id=57]
extents = Vector2( 101.946, 10 )

[node name="dUDE" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 4 )
chara_value = 4

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -11.0315
margin_top = -60.9843
margin_right = 20.9685
margin_bottom = -29.9843
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 5.92274
margin_top = 7.6056
margin_right = 49.9227
margin_bottom = 38.6056
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "asd"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.9, 0.9 )
process_mode = 0

[node name="UI inGame" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -476.063
margin_top = -353.624
margin_right = 803.937
margin_bottom = 366.376
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 472.526, 457.135 )

[node name="attackReset" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 5.15904, -4.36535 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 53 )
animation = "Idle"
frame = 2
speed_scale = 2.0
playing = true

[node name="PlayerBody" type="CollisionShape2D" parent="."]
position = Vector2( 4.16693, 0.198425 )
shape = SubResource( 54 )

[node name="demagedArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="demagedArea"]
position = Vector2( 4.16693, 0.992126 )
shape = SubResource( 55 )

[node name="attackCollusion" type="Area2D" parent="." groups=[
"dudeAttack",
]]
collision_mask = 2

[node name="right" type="CollisionShape2D" parent="attackCollusion"]
position = Vector2( 25.3984, 9.92126 )
shape = SubResource( 56 )
disabled = true
one_way_collision_margin = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="CollisionShape2D" parent="attackCollusion"]
position = Vector2( -16.6677, 9.92126 )
shape = SubResource( 56 )
disabled = true
one_way_collision_margin = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="special" type="Area2D" parent="." groups=[
"dudeSpecial",
]]

[node name="specialR" type="CollisionShape2D" parent="special"]
position = Vector2( 80.9575, 4.36536 )
shape = SubResource( 57 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="specialL" type="CollisionShape2D" parent="special"]
position = Vector2( -72.2268, 3.96851 )
shape = SubResource( 57 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Deadth" parent="." instance=ExtResource( 1 )]
margin_left = -579.564
margin_top = -336.399
margin_right = 596.436
margin_bottom = 327.601

[connection signal="timeout" from="attackReset" to="." method="_on_attackReset_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="demagedArea" to="." method="_on_demagedArea_area_entered"]
